# realistic

./: Cargo.toml  README.md
src/: bounded_rational.rs  computable.rs  expression.rs  lib.rs  main.rs  problem.rs  rational.rs  real.rs  simple.rs
src/computable/: approximation.rs  format.rs
src/rational/: convert.rs
src/real/: convert.rs  mod.rs  test.rs
