[package]
name = "realistic"
description = "Towards an API for the Real Numbers"
license = "Apache-2.0"
repository = "https://github.com/tialaramex/realistic/"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.3", features = ["num-bigint"] }
